Sync all content

--- a/content/resources/14-33s12-th.md
+++ b/content/resources/14-33s12-th.md
@@ -4,6 +4,8 @@ description: Global market and financial figures. Image by MIT OpenCourseWare.
 file: /courses/14-33-economics-research-and-communication-spring-2012/f3489d62d5aac441fe356ba76ed697c7_14-33s12-th.jpg
 file_size: 5874
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Global market and financial figures. (Image\_by MIT OpenCourseWare.)"
   credit: Image by MIT OpenCourseWare.
