--- a/content/resources/14-33s12.md
+++ b/content/resources/14-33s12.md
@@ -4,6 +4,8 @@ description: Global market and financial figures. Image by MIT OpenCourseWare.
 file: /courses/14-33-economics-research-and-communication-spring-2012/c2d446bf61dc64e36d45cf975044286f_14-33s12.jpg
 file_size: 44915
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: "Global market and financial figures. (Image\_by MIT OpenCourseWare.)"
   credit: Image by MIT OpenCourseWare.
